# python-rabbitmq-messagebus

./: .gitattributes  .gitignore  MANIFEST.in  README.md  README.rst  build_backend.py  cleanup_installation.py  dump_repository_config.py  genpackagedoc.py  pyproject.toml  requirements.txt  run_component_test.sh  setup.py
.github/workflows/: release_to_pypi.yml  trigger_aio.yml
EventBusClient/: EventBusClient.py  __init__.py  connection.py  constants.py  event_bus_client.py  plugin_loader.py  publisher.py  qlogger.py  rendezvous.py  startup_policy.py  subscriber.py  subscription_cache.py  utils.py  version.py  wait_mode.py
EventBusClient/config/: config.jsonp  config.jsonp.template
EventBusClient/examples/: README.md  alternate_exchange_sample.py  basic_async_producer_consumer_sample.py  basic_sync_producer_consumer_sample.py  custom_message_sample.py  error_handling_sample.py  multiple_subscriptions_sample.py  rendezvous_sample.py  request_reply_sample.py  run_sample.bat  wait_mode_sample.py
EventBusClient/exchange_handler/: base.py  fanout_handler.py  headers_handler.py  topic_handler.py  x_rtopic_handler.py
EventBusClient/message/: base_message.py  basic_message.py  control_message.py  dict_message.py
EventBusClient/message/deprecated/std_msgs/: __init__.py  dict_msg.py  float32_msg.py  float64_msg.py  header.py  int32_msg.py  msg.py  string_msg.py  uint32_msg.py
EventBusClient/message/deprecated/taf_msgs/: __init__.py  listener_event_indexer.py  listener_event_msg.py
EventBusClient/plugins/: readme.txt
EventBusClient/serializer/: base_serializer.py  json_serializer.py  pickle_serializer.py  protobuf_serializer.py
EventBusClient/test/: start_consumer.bat  start_producer.bat  test.py  test_sync.py
RabbitMqMessagebus/: RabbitMqMessagebus.py  version.py
additions/: CExtendedSetup.py  __init__.py
config/: CRepositoryConfig.py  __init__.py  repository_config.json
config/robotframework_aio/: release_items_EventBusClient.json  release_items_RabbitMqMessagebus.json
docs/: README.md
docs/adr/: 000-template.md  001-standardize-ipc-api.md  002-async-first-api.md  003-plugin-strategy-pattern.md  004-configuration-driven-setup.md  005-connection-manager.md  006-exchange-types.md  007-startup-policy-rendezvous.md  008-subscription-cache.md  009-unroutable-message-handling.md  README.md
docs/diagrams/: README.md  architecture.puml  class.puml  component.puml  overview.puml  sequence-connection.puml  sequence-lifecycle.puml  sequence-publish.puml  sequence-rendezvous.puml  sequence-subscribe.puml  sequence-unroutable.puml
examples/: README.md  alternate_exchange_sample.py  basic_async_producer_consumer_sample.py  basic_sync_producer_consumer_sample.py  config.jsonp  custom_message_sample.py  error_handling_sample.py  headers_exchange_sample.py  measure.cmd  multiple_subscriptions_sample.py  rendezvous_sample.py  request_reply_sample.py  run_sample.bat  wait_mode_sample.py
packagedoc/: packagedoc_config.json
packagedoc/additional_docs/: Appendix.rst  Description.tex  Glossary.tex  History.tex  Introduction.tex
setup/: readme_setup.txt  setup.json
test/: EBC_TestUsecases.csv  EBC_TestUsecases.html  EBC_TestUsecases.rst  EBC_TestUsecases.txt  component_test.py  readme.rst
test/docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  init-rabbitmq.sh  rabbitmq_rtopic_exchange-3.12.0.ez
test/libs/: CCodePatterns.py  CConfig.py  CGenCode.py
test/pytest/: executepytest.py  pytest.ini
test/pytest/coverage/: coverage.py
test/pytest/pytestfiles/: test_01_TopicExchangeHandler_GOODCASE.py  test_02_TopicExchangeHandler_BADCASE.py  test_03_XRTopicExchangeHandler_GOODCASE.py  test_04_XRTopicExchangeHandler_BADCASE.py  test_05_XRTopicExchangeHandler_EDGECASES.py  test_06_BasicMessage_GOODCASE.py  test_07_BasicMessage_EDGECASES.py  test_08_ControlMessage_GOODCASE.py  test_09_ControlMessage_BADCASE.py  test_10_ControlMessage_EDGECASES.py  test_11_ConfigureUnroutablePolicy_GOODCASE.py  test_12_HeadersExchangeHandler_GOODCASE.py
test/pytest/pytestfiles/pytestlibs/: CExecute.py
test/testconfig/: TestConfig.py  __init__.py  config.jsonp  config_fanout.jsonp  config_headers.jsonp  config_rtopic.jsonp
test/testfiles/: EBC_0001.py  EBC_0002.py  EBC_0003.py  EBC_0004.py  EBC_0005.py  EBC_0006.py  EBC_0007.py  EBC_0008.py  EBC_0009.py  EBC_0010.py  EBC_0011.py  EBC_0012.py  EBC_0013.py  EBC_0014.py  EBC_0015.py  EBC_0016.py  EBC_0017.py  EBC_0018.py  EBC_0019.py  EBC_0020.py  EBC_0021.py  EBC_0022.py  EBC_0023.py  EBC_0024.py  EBC_0025.py  EBC_0026.py  EBC_0027.py  EBC_0028.py  EBC_0029.py  EBC_0030.py  EBC_0031.py  EBC_0032.py  EBC_0033.py  EBC_0034.py  EBC_0035.py  EBC_0036.py  EBC_0037.py  EBC_0038.py  EBC_0039.py  EBC_0040.py  (+7 more)
test/testutils/: polling_utils.py
test/testutils/messages/: simple_test_message.py
